esp_client/build/log/idf_py_stdout_output_1836
[1/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\coding_pirates\hacking\esp-projekter\esp_client\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Users/allan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/coding_pirates/hacking/esp-projekter/esp_client/build/bootloader/bootloader.bin"
Bootloader binary size 0x5040 bytes. 0x2fc0 bytes (37%) free.
[2/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Espressif\tools\riscv32-esp-elf\esp-12.2.0_20230208\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1-1-gd3c99ed3b8\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/coding_pirates/hacking/esp-projekter/esp_client/Components/myWifi -ID:/coding_pirates/hacking/esp-projekter/esp_client/build/config -ID:/coding_pirates/hacking/esp-projekter/esp_client/main -IC:/Users/allan/esp/esp-idf/components/newlib/platform_include -IC:/Users/allan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/allan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/allan/esp/esp-idf/components/freertos/esp_additions/include/freertos -IC:/Users/allan/esp/esp-idf/components/freertos/esp_additions/include -IC:/Users/allan/esp/esp-idf/components/freertos/esp_additions/arch/riscv/include -IC:/Users/allan/esp/esp-idf/components/esp_hw_support/include -IC:/Users/allan/esp/esp-idf/components/esp_hw_support/include/soc -IC:/Users/allan/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -IC:/Users/allan/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -IC:/Users/allan/esp/esp-idf/components/esp_hw_support/port/esp32c3/private_include -IC:/Users/allan/esp/esp-idf/components/heap/include -IC:/Users/allan/esp/esp-idf/components/log/include -IC:/Users/allan/esp/esp-idf/components/soc/include -IC:/Users/allan/esp/esp-idf/components/soc/esp32c3 -IC:/Users/allan/esp/esp-idf/components/soc/esp32c3/include -IC:/Users/allan/esp/esp-idf/components/hal/esp32c3/include -IC:/Users/allan/esp/esp-idf/components/hal/include -IC:/Users/allan/esp/esp-idf/components/hal/platform_port/include -IC:/Users/allan/esp/esp-idf/components/esp_rom/include -IC:/Users/allan/esp/esp-idf/components/esp_rom/include/esp32c3 -IC:/Users/allan/esp/esp-idf/components/esp_rom/esp32c3 -IC:/Users/allan/esp/esp-idf/components/esp_common/include -IC:/Users/allan/esp/esp-idf/components/esp_system/include -IC:/Users/allan/esp/esp-idf/components/esp_system/port/soc -IC:/Users/allan/esp/esp-idf/components/esp_system/port/include/riscv -IC:/Users/allan/esp/esp-idf/components/esp_system/port/include/private -IC:/Users/allan/esp/esp-idf/components/riscv/include -IC:/Users/allan/esp/esp-idf/components/lwip/include -IC:/Users/allan/esp/esp-idf/components/lwip/include/apps -IC:/Users/allan/esp/esp-idf/components/lwip/include/apps/sntp -IC:/Users/allan/esp/esp-idf/components/lwip/lwip/src/include -IC:/Users/allan/esp/esp-idf/components/lwip/port/include -IC:/Users/allan/esp/esp-idf/components/lwip/port/freertos/include -IC:/Users/allan/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/allan/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/allan/esp/esp-idf/components/nvs_flash/include -IC:/Users/allan/esp/esp-idf/components/spi_flash/include -IC:/Users/allan/esp/esp-idf/components/esp_partition/include -IC:/Users/allan/esp/esp-idf/components/esp_netif/include -IC:/Users/allan/esp/esp-idf/components/esp_event/include -ID:/coding_pirates/hacking/esp-projekter/esp_client/Components/myWifi/include -IC:/Users/allan/esp/esp-idf/components/esp_wifi/include -IC:/Users/allan/esp/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Users/allan/esp/esp-idf/components/esp_phy/include -IC:/Users/allan/esp/esp-idf/components/esp_phy/esp32c3/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=D:/coding_pirates/hacking/esp-projekter/esp_client=. -fmacro-prefix-map=C:/Users/allan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c D:/coding_pirates/hacking/esp-projekter/esp_client/main/main.c
D:/coding_pirates/hacking/esp-projekter/esp_client/main/main.c: In function 'app_main':
D:/coding_pirates/hacking/esp-projekter/esp_client/main/main.c:21:3: error: implicit declaration of function 'esp_netif_create_default_wifi_sta'; did you mean 'esp_netif_get_default_netif'? [-Werror=implicit-function-declaration]
   21 |   esp_netif_create_default_wifi_sta();
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |   esp_netif_get_default_netif
D:/coding_pirates/hacking/esp-projekter/esp_client/main/main.c: At top level:
D:/coding_pirates/hacking/esp-projekter/esp_client/main/main.c:12:20: warning: 'TAG' defined but not used [-Wunused-variable]
   12 | static const char *TAG = "ESP-Client";
      |                    ^~~
cc1.exe: some warnings being treated as errors
[3/10] Building C object esp-idf/myWifi/CMakeFiles/__idf_myWifi.dir/myWifi.c.obj
ninja: build stopped: subcommand failed.
